src/PortfolixContainer/Home/Header/Header.css
.sticky-content {
    position: fixed;
    top: 0;
    z-index: 10;
    background-color: #1f2235;
    width: 100%;
}

.header-container {
    display: flex;
    justify-content: center;
    height: 160px;
    color: var(--white);
}

.header-parent {
    display: flex;
    align-items: center;
    justify-content: space-around;
    height: 100%;
    width: 70%;
    color: var(--white);
}

.header-logo {
    font-size: 50px;
    font-family: "Poppins ExtraBold";
    color: var(--white);
}

.header-options {
    display: flex;
    align-items: center;
}

.header-option {
    font-size: 16px;
    cursor: pointer;
    font-weight: 600;
}

.header-hamburger {
    display: none;
    color: var(--white);
}

.header-option-separator {
    margin: 0 50px 0 0;
    color: var(--white);
}

.open-bracket {
    color: var(--dark-orange);
}

.close-bracket {
    color: var(--dark-orange);
}

.SLCTD {
    color: var(--dark-orange);
}

.NOT_SLCTD {
    color: var(--sea-green);
}

@media only screen and (max-width: 1110px) {
    .header-parent {
        width: 80%;
    }
}

@media only screen and (max-width: 970px) {
    .header-hamburger {
        display: block;
    }

    .header-parent {
        width: 100%;
        padding: 0 40px;
        position: relative;
    }

    .header-options {
        display: flex;
        flex-direction: column;
        position: absolute;
        left: -100%;
        transition: all .3s ease-out;
        top: 0px;
        height: 100vh;
        width: 100%;
        justify-content: space-around;
        background-color: #1f2235;
        z-index: 1000;
        opacity: 0.5;
    }

    .header-option-separator {
        margin: 0;
    }

    .selected-header-option {
        color: var(--white);
    }

    .header-hamburger-bars {
        font-size: 36px;
        cursor: pointer;
        margin: 0px 10px;
        color: var(--white);
    }

    .show-hamburger-options {
        left: 0;
        opacity: 1;
    }
}

